fixed the movie list wraping

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ a {
   font-weight: 300;
 }
 
+/* Landing Page */
+
 /* Nav */
 .nav__content {
   position: absolute;
@@ -260,15 +262,23 @@ a {
   }
 }
 
+.page-container {
+  background-color: black;
+  min-height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .movies__list {
   margin-top: 60px;
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   position: relative;
+  background-color: black;
 }
-
 .movies__list--loading {
   font-size: 64px;
   color: crimson;
@@ -281,7 +291,7 @@ a {
 
 .movie {
   width: 198px;
-  margin: 24px 8px;
+  margin: 24px 18px;
   background-color: #1e1e1e;
   color: #1a1a1a;
   border-radius: 8px;
